--- a/d-data-binding.html
+++ b/d-data-binding.html
@@ -3,14 +3,15 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
 	<body>
 
-		<div ng-app="" ng-init="quatity=1; price=5"></div>
-		Quantity: <input type="number" ng-model="quantity">	
-		Price: <input type="number" ng-model="price">	
+		<div ng-app="" ng-init="quantity=1; price=5">
+			Quantity: <input type="number" ng-model="quantity">	
+			Price: <input type="number" ng-model="price">	
 
-		<br><br>
+			<br><br>
 
-		Total in dollar: {{quantity * price}}
-		
+			Total in dollar: {{quantity * price}}
+
+		</div>
 
 	</body>
 </html>
